--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<title>Greg Murray</title>
 
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.css" />
 	<link rel="stylesheet" type="text/css" href="./static/styles.css">
 	<link rel="icon" href="./icon.png">
 </head>
@@ -16,13 +17,13 @@
 
 	<!-- background picture -->
 	<div class="row">
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<div class="topPic col-lg-12 col-md-12 col-sm-12 col-xs-12">
 			<div class="picture">
 				<div id="nameSmall">I'm Greg,</div>
   				<div id="nameSmall">welcome to my site.</div>
   				<div style="text-align:center;">
-	  				<a href="#" class="action-button shadow animate blue">Resume</a>
-	  				<a href="#" class="action-button shadow animate green">Contact</a>
+	  				<a href="#" class="action-button shadow animate blue" style="color: #FFF; text-decoration: none;">Resume</a>
+	  				<a href="#" class="action-button shadow animate green" style="color: #FFF; text-decoration: none;">Contact</a>
   				</div>
 			</div>
 		</div>
@@ -30,13 +31,15 @@
 
 	<!-- WORK EXPERIENCE -->
 	<div id="work"/>
-	<div class="row">
-		<div class="col-lg-4 col-md-3 col-sm-2 col-xs-0"></div>
-		<div class="col-lg-4 col-md-6 col-sm-8 col-xs-12">
-			<h1>A little about me</h1>
+	<div class="background1">
+		
+		<div class="row">
+			<div class="col-lg-4 col-md-3 col-sm-2 col-xs-0"></div>
+			<div class="col-lg-4 col-md-6 col-sm-8 col-xs-12">
+				<h1>A little about me</h1>
+			</div>
+			<div class="col-lg-4 col-md-3 col-sm-2 col-xs-0"></div>
 		</div>
-		<div class="col-lg-4 col-md-3 col-sm-2 col-xs-0"></div>
-	</div>
 
 		<!-- my picture -->
 		<div class="row">
@@ -45,20 +48,20 @@
 			</div>
 		</div>
 
-		<!-- left side experience -->
+		<!-- Illinois education -->
 		<div class="row">
-			<div class="col-lg-2 col-md-2 col-sm-1 col-xs-2"></div>
-			<div class="col-lg-3 col-md-3 col-sm-4 col-xs-8">
-				<a href="https://pivotal.io/labs" target="_blank">
-				<div class="aboutMe" style="background-image: url('./pivotal1.jpg');"></div>
+			<div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
+			<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+				<a href="http://illinois.edu/" target="_blank">
+				<div class="aboutMe" style="background-image: url('./static/images/illinois.jpeg');"></div>
 				</a>	
 			</div>
-			<div class="col-lg-5 col-md-5 col-sm-6 col-xs-2">
-				<h3 class="hidden-xs">Pivotal Labs</h3>
-				<div class="hidden-xs" id="subtitle">Software Engineer Intern, Summer 2016</div>
-				<div class="hidden-xs" id="location">Chicago, IL</div>
-				<p class="hidden-xs">
-					a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
+			<div class="col-lg-5 col-md-5 col-sm-6 hidden-xs">
+				<h3>University of Illinois at Urbana-Champaign</h3>
+				<div id="subtitle">B.S. in Computer Science with Mathematics Minor, May 2018</div>
+				<div id="location">Champaign, IL</div>
+				<p>
+					Currently 
 				</p>
 			</div>
 			<div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
@@ -67,8 +70,52 @@
 		<div class="row hidden-lg hidden-md hidden-sm">
 			<div class="col-xs-1"></div>
 			<div class="col-xs-10">
-				<h3  style="text-align:center;">Pivotal Labs</h3>
-				<div style="text-align:center;" id="subtitle">Software Engineer Internship, Summer 2016</div>
+				<h3  style="text-align:center;">University of Illinois at Urbana-Champaign</h3>
+				<div style="text-align:center;" id="subtitle">B.S. in Computer Science with Mathematics Minor, May 2018</div>
+				<div style="text-align:center;" id="location">Champaign, IL</div>
+				<p>
+					Currently
+				</p>
+			</div>
+			<div class="col-xs-1"></div>
+		</div>
+
+
+		<div class="row space"></div>
+		<div class="row space"></div>
+
+
+		<!-- Echelon Consulting -->
+		<div class="row">
+			<div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
+			<div class="col-lg-5 col-md-5 col-sm-6 hidden-xs">
+				<h3>Echelon Consulting</h3>
+				<div id="subtitle">Software Engineer Intern, Summer 2017</div>
+				<div id="location">Chicago, IL</div>
+				<p>
+					a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
+				</p>
+			</div>
+			<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+				<div class="hidden-xs" style="float:left;">
+					<a href="http://www.echelon.org/" target="_blank">
+					<div class="aboutMe" style="background-image: url('./static/images/echelon.jpeg');"></div>
+					</a>
+				</div>
+				<div class="hidden-lg hidden-md hidden-sm">
+					<a href="http://www.echelon.org/" target="_blank">
+					<div class="aboutMe" style="background-image: url('./static/images/echelon.jpeg');"></div>
+					</a>
+				</div>	
+			</div>
+			<div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
+		</div>
+		<div class="row space hidden-lg hidden-md hidden-sm"></div>
+		<div class="row hidden-lg hidden-md hidden-sm">
+			<div class="col-xs-1"></div>
+			<div class="col-xs-10">
+				<h3  style="text-align:center;">Echelon Consulting</h3>
+				<div style="text-align:center;" id="subtitle">Software Engineer Intern, Summer 2017</div>
 				<div style="text-align:center;" id="location">Chicago, IL</div>
 				<p>
 					a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
@@ -81,10 +128,15 @@
 		<div class="row space"></div>
 		<div class="row space"></div>
 
-		<!-- right space -->
+
+		<!-- Pivotal Labs -->
 		<div class="row">
-			<div class="col-lg-2 col-md-2 col-sm-1 col-xs-2"></div>
-			
+			<div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
+			<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+				<a href="https://pivotal.io/labs" target="_blank">
+				<div class="aboutMe" style="background-image: url('./static/images/pivotal.jpg');"></div>
+				</a>	
+			</div>
 			<div class="col-lg-5 col-md-5 col-sm-6 hidden-xs">
 				<h3>Pivotal Labs</h3>
 				<div id="subtitle">Software Engineer Intern, Summer 2016</div>
@@ -93,26 +145,14 @@
 					a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
 				</p>
 			</div>
-			<div class="col-lg-3 col-md-3 col-sm-4 col-xs-8">
-				<div class="hidden-xs" style="float:left;">
-					<a href="https://pivotal.io/labs" target="_blank">
-					<div class="aboutMe" style="background-image: url('./pivotal1.jpg');"></div>
-					</a>
-				</div>
-				<div class="hidden-lg hidden-md hidden-sm">
-					<a href="https://pivotal.io/labs" target="_blank">
-					<div class="aboutMe" style="background-image: url('./pivotal1.jpg');"></div>
-					</a>
-				</div>	
-			</div>
-			<div class="col-lg-2 col-md-2 col-sm-1 col-xs-2"></div>
+			<div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
 		</div>
 		<div class="row space hidden-lg hidden-md hidden-sm"></div>
 		<div class="row hidden-lg hidden-md hidden-sm">
 			<div class="col-xs-1"></div>
 			<div class="col-xs-10">
 				<h3  style="text-align:center;">Pivotal Labs</h3>
-				<div style="text-align:center;" id="subtitle">Software Engineer Internship, Summer 2016</div>
+				<div style="text-align:center;" id="subtitle">Software Engineer Intern, Summer 2016</div>
 				<div style="text-align:center;" id="location">Chicago, IL</div>
 				<p>
 					a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
@@ -121,24 +161,72 @@
 			<div class="col-xs-1"></div>
 		</div>
 
-
 		<div class="row space"></div>
 		<div class="row space"></div>
 
-
+		<!-- Citadel LLC -->
 		<div class="row">
-			<div class="col-lg-2 col-md-2 col-sm-1 col-xs-2"></div>
-			<div class="col-lg-3 col-md-3 col-sm-4 col-xs-8">
-				<a href="https://pivotal.io/labs" target="_blank">
-				<div class="aboutMe" style="background-image: url('./pivotal1.jpg');"></div>
+			<div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
+			<div class="col-lg-5 col-md-5 col-sm-6 hidden-xs">
+				<h3>Citadel LLC</h3>
+				<div id="subtitle">Citadel Technology Intern, Summer 2015</div>
+				<div id="location">Chicago, IL</div>
+				<p>
+					a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
+				</p>
+			</div>
+			<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+				<div class="hidden-xs" style="float:left;">
+					<a href="https://www.citadel.com/" target="_blank">
+					<div class="aboutMe" style="background-image: url('./static/images/citadel.jpg');"></div>
+					</a>
+				</div>
+				<div class="hidden-lg hidden-md hidden-sm">
+					<a href="https://www.citadel.com/" target="_blank">
+					<div class="aboutMe" style="background-image: url('./static/images/citadel.jpg');"></div>
+					</a>
+				</div>	
+			</div>
+			<div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
+		</div>
+		<div class="row space hidden-lg hidden-md hidden-sm"></div>
+		<div class="row hidden-lg hidden-md hidden-sm">
+			<div class="col-xs-1"></div>
+			<div class="col-xs-10">
+				<h3  style="text-align:center;">Citadel LLC</h3>
+				<div style="text-align:center;" id="subtitle">Citadel Technology Intern, Summer 2015</div>
+				<div style="text-align:center;" id="location">Chicago, IL</div>
+				<p>
+					a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
+				</p>
+			</div>
+			<div class="col-xs-1"></div>
+		</div>
+	</div>
+	
+	<!-- Projects -->
+	<div class="background2">
+		<div class="row">
+			<div class="col-lg-4 col-md-3 col-sm-2 col-xs-0"></div>
+			<div class="col-lg-4 col-md-6 col-sm-8 col-xs-12">
+				<h1>My Projects</h1>
+			</div>
+			<div class="col-lg-4 col-md-3 col-sm-2 col-xs-0"></div>
+		</div>
+
+		<!-- College TV Device -->
+		<div class="row">
+			<div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
+			<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+				<a href="" target="_blank">
+				<div class="aboutMe" style="background-image: url('./static/images/raspberryPi.jpeg');"></div>
 				</a>	
 			</div>
-			<div class="col-lg-5 col-md-5 col-sm-6 col-xs-2">
-				<h3 class="hidden-xs">Pivotal Labs</h3>
-				<div class="hidden-xs" id="subtitle">Software Engineer Intern, Summer 2016</div>
-				<div class="hidden-xs" id="location">Chicago, IL</div>
+			<div class="col-lg-5 col-md-5 col-sm-6 hidden-xs">
+				<h3 class="hidden-xs">Raspberry Pi Google Calendar TV Alarm</h3>
+				<div class="hidden-xs" id="subtitle">Spring 2017</div>
 				<p class="hidden-xs">
-					a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
+					Currently 
 				</p>
 			</div>
 			<div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
@@ -147,9 +235,48 @@
 		<div class="row hidden-lg hidden-md hidden-sm">
 			<div class="col-xs-1"></div>
 			<div class="col-xs-10">
-				<h3  style="text-align:center;">Pivotal Labs</h3>
-				<div style="text-align:center;" id="subtitle">Software Engineer Internship, Summer 2016</div>
-				<div style="text-align:center;" id="location">Chicago, IL</div>
+				<h3  style="text-align:center;">Raspberry Pi Google Calendar TV Alarm</h3>
+				<div style="text-align:center;" id="subtitle">Spring 2017</div>
+				<p>
+					Currently
+				</p>
+			</div>
+			<div class="col-xs-1"></div>
+		</div>
+
+		<div class="row space"></div>
+		<div class="row space"></div>
+
+		<!-- Fantasy Sports scraper -->
+		<div class="row">
+			<div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
+			<div class="col-lg-5 col-md-5 col-sm-6 hidden-xs">
+				<h3>Fantasy Sports Lineup Generator</h3>
+				<div id="subtitle">Fall 2016</div>
+				<p>
+					a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
+				</p>
+			</div>
+			<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+				<div class="hidden-xs" style="float:left;">
+					<a href="" target="_blank">
+					<div class="aboutMe" style="background-image: url('./static/images/sports.jpg');"></div>
+					</a>
+				</div>
+				<div class="hidden-lg hidden-md hidden-sm">
+					<a href="" target="_blank">
+					<div class="aboutMe" style="background-image: url('./static/images/sports.jpg');"></div>
+					</a>
+				</div>	
+			</div>
+			<div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
+		</div>
+		<div class="row space hidden-lg hidden-md hidden-sm"></div>
+		<div class="row hidden-lg hidden-md hidden-sm">
+			<div class="col-xs-1"></div>
+			<div class="col-xs-10">
+				<h3  style="text-align:center;">Fantasy Sports Lineup Generator</h3>
+				<div style="text-align:center;" id="subtitle">Fall 2016</div>
 				<p>
 					a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a a
 				</p>
@@ -157,6 +284,168 @@
 			<div class="col-xs-1"></div>
 		</div>
 
+		<div class="row space"></div>
+		<div class="row space"></div>
+
+		<!-- Stock picking application -->
+		<div class="row">
+			<div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
+			<div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
+				<a href="" target="_blank">
+				<div class="aboutMe" style="background-image: url('./static/images/stock.jpeg');"></div>
+				</a>	
+			</div>
+			<div class="col-lg-5 col-md-5 col-sm-6 hidden-xs">
+				<h3>Personal Website and Photo Album</h3>
+				<div id="subtitle">Spring 2017</div>
+				<p>
+					Currently 
+				</p>
+			</div>
+			<div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
+		</div>
+		<div class="row space hidden-lg hidden-md hidden-sm"></div>
+		<div class="row hidden-lg hidden-md hidden-sm">
+			<div class="col-xs-1"></div>
+			<div class="col-xs-10">
+				<h3  style="text-align:center;">Django Personal Website</h3>
+				<div style="text-align:center;" id="subtitle">Spring 2017</div>
+				<p>
+					Currently
+				</p>
+			</div>
+			<div class="col-xs-1"></div>
+		</div>		
+	</div>
+
+	<!-- Travel -->
+	<div class="background1">
+		<div class="row">
+			<div class="col-lg-4 col-md-3 col-sm-2 col-xs-0"></div>
+			<div class="col-lg-4 col-md-6 col-sm-8 col-xs-12">
+				<h1>Travel</h1>
+			</div>
+			<div class="col-lg-4 col-md-3 col-sm-2 col-xs-0"></div>
+		</div>
+
+		<div class="row">
+			<div class="col-lg-3 col-md-3 col-sm-2 col-xs-1"></div>
+			<div class="col-lg-6 col-md-6 col-sm-8 col-xs-10">
+				<h3 style="text-align:center; font-style:italic; font-weight:normal;">
+					I love to travel and meet new people. Here are some of my favorite memories over the years.
+				</h3>
+			</div>
+			<div class="col-lg-3 col-md-3 col-sm-2 col-xs-1"></div>
+		</div>
+		<div class="row space"  style="text-align:center;">
+			<video style="border:1px solid black;" class="hidden-xs" width="560" height="315" controls>
+  				<source src="./static/PISA.mp4" type="video/mp4">
+  				Your browser does not support HTML5 video.
+			</video>
+			<video class="hidden-lg hidden-md hidden-sm" width="280" height="160" controls>
+  				<source src="./static/PISA.mp4" type="video/mp4">
+  				Your browser does not support HTML5 video.
+			</video>
+		</div>
+		<div class="row">
+			<div class="col-lg-1 col-md-1 hidden-sm hidden-xs"></div>
+			<div class="col-lg-10 col-md-10 col-sm-12 col-xs-12 photoContainer">
+				<div class="photo">
+		            <a href="./static/photoGallery/lakePiney.JPG" data-fancybox="images">
+		                <img src="./static/photoGallery/lakePiney.JPG" height="150px" width="150px"/>
+		            </a>
+		        </div>
+		        <div class="photo">
+		            <a href="./static/photoGallery/pisaYard.JPG" data-fancybox="images">
+		                <img src="./static/photoGallery/pisaYard.JPG" height="150px" width="150px"/>
+		            </a>
+		        </div>
+		        <div class="photo">
+		            <a href="./static/photoGallery/pisaTown.JPG" data-fancybox="images">
+		                <img src="./static/photoGallery/pisaTown.JPG" height="150px" width="150px"/>
+		            </a>
+		        </div>
+		        <div class="photo">
+		            <a href="./static/photoGallery/florence.JPG" data-fancybox="images">
+		                <img src="./static/photoGallery/florence.JPG" height="150px" width="150px"/>
+		            </a>
+		        </div>
+		        <div class="photo">
+		            <a href="./static/photoGallery/cinqueTerra.JPG" data-fancybox="images">
+		                <img src="./static/photoGallery/cinqueTerra.JPG" height="150px" width="150px"/>
+		            </a>
+		        </div>
+		        <div class="photo">
+		            <a href="./static/photoGallery/leaningTowerView.JPG" data-fancybox="images">
+		                <img src="./static/photoGallery/leaningTowerView.JPG" height="150px" width="150px"/>
+		            </a>
+		        </div>
+		        <div class="photo">
+		            <a href="./static/photoGallery/swedenSwim.JPG" data-fancybox="images">
+		                <img src="./static/photoGallery/swedenSwim.JPG" height="150px" width="150px"/>
+		            </a>
+		        </div>
+		        <div class="photo">
+		            <a href="./static/photoGallery/sweden.JPG" data-fancybox="images">
+		                <img src="./static/photoGallery/sweden.JPG" height="150px" width="150px"/>
+		            </a>
+		        </div>
+		        <div class="photo">
+		            <a href="./static/photoGallery/wimbledon.JPG" data-fancybox="images">
+		                <img src="./static/photoGallery/wimbledon.JPG" height="150px" width="150px"/>
+		            </a>
+		        </div>
+		        <div class="photo">
+		            <a href="./static/photoGallery/paris.JPG" data-fancybox="images">
+		                <img src="./static/photoGallery/paris.JPG" height="150px" width="150px"/>
+		            </a>
+		        </div>
+				<div class="photo">
+		            <a href="./static/photoGallery/florenceBridge.JPG" data-fancybox="images">
+		                <img src="./static/photoGallery/florenceBridge.JPG" height="150px" width="150px"/>
+		            </a>
+		        </div>
+		        <div class="photo">
+		            <a href="./static/photoGallery/vatican.JPG" data-fancybox="images">
+		                <img src="./static/photoGallery/vatican.JPG" height="150px" width="150px"/>
+		            </a>
+		        </div>
+	        </div>
+	        <div class="col-lg-1 col-md-1 hidden-sm hidden-xs"></div>
+        </div>
+	</div>
+
+	<div class="background2">
+		<div class="row">
+			<div class="col-lg-4 col-md-3 col-sm-2 col-xs-0"></div>
+			<div class="col-lg-4 col-md-6 col-sm-8 col-xs-12">
+				<h1>My Contact Info</h1>
+			</div>
+			<div class="col-lg-4 col-md-3 col-sm-2 col-xs-0"></div>
+		</div>
+		<div class="row">
+			<div class="col-lg-4 col-md-3 col-sm-2 col-xs-0"></div>
+			<div class="col-lg-4 col-md-6 col-sm-8 col-xs-12">
+				<h2>I'm Chicago raised, a driven developer, and 2006 Time Magazine's Person of the Year. Let's get in touch.</h2>
+			</div>
+			<div class="col-lg-4 col-md-3 col-sm-2 col-xs-0"></div>
+		</div>
+		<div class="row space">
+			<div class="col-lg-3 col-md-3 col-sm-2 col-xs-0">
+				
+			</div>
+			<div style="text-align:center;" class="col-lg-6 col-md-6 col-sm-8 col-xs-12">
+				<img class="bottomImg" src="./static/images/resumeIcon.png"/>
+				<img class="bottomImg" src="./static/images/emailIcon.svg"/>
+				<img class="bottomImg" src="./static/images/linkedInIcon.png"/>
+			</div>
+			<div class="col-lg-3 col-md-3 col-sm-2 col-xs-0">
+				
+			</div>
+		</div>
+	</div>
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.js"></script>
 </body>
 </html>
