--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 </head>
 
 <body>
-
+	<!-- <div class="hidden-xs">
+		<div id="navBar"></div>
+	</div> -->
 	<!-- background picture -->
 	<div class="row">
 		<div class="topPic col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -337,9 +339,12 @@
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-2 col-xs-1"></div>
 		</div>
-		<div class="row space"  style="text-align:center;">
+		<div class="row"  style="text-align:center;">
 			<iframe class="hidden-xs" width="560" height="315" src="https://www.youtube.com/embed/cxQLUCq6P-c" frameborder="1" allowfullscreen></iframe>
 			<iframe class="hidden-lg hidden-md hidden-sm" width="280" height="160" src="https://www.youtube.com/embed/cxQLUCq6P-c" frameborder="0" allowfullscreen></iframe>
+		</div>
+		<div class="row" style="text-align:center">
+			<div id="location">Video credit to Jenna Smith</h2>
 		</div>
 		<div class="row">
 			<div class="col-lg-1 col-md-1 hidden-sm hidden-xs"></div>
@@ -406,6 +411,7 @@
 		        </div>
 	        </div>
 	        <div class="col-lg-1 col-md-1 hidden-sm hidden-xs"></div>
+        	</div>
         </div>
 	</div>
 
@@ -428,7 +434,7 @@
 			<div class="col-lg-3 col-md-3 col-sm-2 col-xs-0">
 				
 			</div>
-			<div style="text-align:center;" class="col-lg-6 col-md-6 col-sm-8 col-xs-12">
+			<div style="text-align:center;" class="col-lg-6 col-md-6 col-sm-8 col-xs-12 photoContainer">
 				<img class="bottomImg" src="./static/images/resumeIcon.png"/>
 				<img class="bottomImg" src="./static/images/emailIcon.svg"/>
 				<img class="bottomImg" src="./static/images/linkedInIcon.png"/>
@@ -441,5 +447,6 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.js"></script>
+	<script src="./static/main.js"></script>
 </body>
 </html>
