--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 	</div> -->
 	<!-- background picture -->
 	<div class="row">
-		<div class="topPic col-lg-12 col-md-12 col-sm-12 col-xs-12">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="topPic">
 			<div class="picture">
 				<div id="nameSmall">I'm Greg,</div>
   				<div id="nameSmall">welcome to my site.</div>
-  				<div style="text-align:center;">
+  				<div style="text-align:center; position:relative; top:42%;">
 	  				<a href="#" class="action-button shadow animate blue" style="color: #FFF; text-decoration: none;">Resume</a>
 	  				<a href="#" class="action-button shadow animate green" style="color: #FFF; text-decoration: none;">Contact</a>
   				</div>
