--- a/index.html
+++ b/index.html
@@ -14,10 +14,16 @@
 </head>
 
 <body>
-	<!-- <div class="hidden-xs">
-		<div id="navBar"></div>
-	</div> -->
+	<div class="hidden-xs">
+		<div class="arrow" id="upArrow">
+			<span class="glyphicon glyphicon-chevron-up navArrow"></span>
+		</div>
+		<div class="arrow" id="downArrow">
+			<span class="glyphicon glyphicon-chevron-down navArrow"></span>
+		</div>
+	</div>
 	<!-- background picture -->
+	<a href="#top"></a>
 	<div class="row">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="topPic">
 			<div class="picture">
@@ -32,7 +38,8 @@
 	</div>
 
 	<!-- WORK EXPERIENCE -->
-	<div id="work"/>
+	<a href="#work"></a>
+	<div id="work"></div>
 	<div class="background1">
 		
 		<div class="row">
@@ -207,6 +214,8 @@
 	</div>
 	
 	<!-- Projects -->
+	<a href="#projects"></a>
+	<div id="projects"></div>
 	<div class="background2">
 		<div class="row">
 			<div class="col-lg-4 col-md-3 col-sm-2 col-xs-0"></div>
@@ -321,6 +330,8 @@
 	</div>
 
 	<!-- Travel -->
+	<a href="#travel"></a>
+	<div id="travel"></div>
 	<div class="background1">
 		<div class="row">
 			<div class="col-lg-4 col-md-3 col-sm-2 col-xs-0"></div>
@@ -415,6 +426,9 @@
         </div>
 	</div>
 
+	<!-- My contact -->
+	<a href="#contact"></a>
+	<div id="contact"></div>
 	<div class="background2">
 		<div class="row">
 			<div class="col-lg-4 col-md-3 col-sm-2 col-xs-0"></div>
