--- a/index.html
+++ b/index.html
@@ -22,6 +22,23 @@
 			<span class="glyphicon glyphicon-chevron-down navArrow"></span>
 		</div>
 	</div>
+	<div class="hidden-lg hidden-md hidden-sm">
+		<!-- mobile nav bar -->
+		<div class="btn-group btn-group-lg mobile-top">
+	 		<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: #fff;">
+	 		<span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
+	 		</button>
+	  		<div class="dropdown-menu dropdown-menu-left" id="mobileDrop">
+	  			<div class="dropdown-item" id="mobileAboutMe">My Work</div>
+	  			<div class="dropdown-divider"></div>
+	    		<div class="dropdown-item" id="mobileProjects">My Projects</div>
+	    		<div class="dropdown-divider"></div>
+	    		<div class="dropdown-item" id="mobileTravel">My Travel</div>
+	    		<div class="dropdown-divider"></div>
+	    		<div class="dropdown-item" id="mobileContact">Contact</div>
+	  		</div>
+		</div>
+	</div>
 	<!-- background picture -->
 	<a href="#top"></a>
 	<div class="row">
@@ -30,8 +47,8 @@
 				<div id="nameSmall">I'm Greg,</div>
   				<div id="nameSmall">welcome to my site.</div>
   				<div style="text-align:center; position:relative; top:42%;">
-	  				<a href="#" class="action-button shadow animate blue" style="color: #FFF; text-decoration: none;">Resume</a>
-	  				<a href="#" class="action-button shadow animate green" style="color: #FFF; text-decoration: none;">Contact</a>
+	  				<a href="./static/Greg_Murray.pdf" target="_blank" class="action-button shadow animate blue" style="color: #FFF; text-decoration: none;">Resume</a>
+	  				<a href="mailto:greg.murray20@gmail.com" class="action-button shadow animate green" style="color: #FFF; text-decoration: none;">Contact</a>
   				</div>
 			</div>
 		</div>
@@ -449,9 +466,9 @@
 				
 			</div>
 			<div style="text-align:center;" class="col-lg-6 col-md-6 col-sm-8 col-xs-12 photoContainer">
-				<img class="bottomImg" src="./static/images/resumeIcon.png"/>
-				<img class="bottomImg" src="./static/images/emailIcon.svg"/>
-				<img class="bottomImg" src="./static/images/linkedInIcon.png"/>
+				<a href="./static/Greg_Murray.pdf" target="_blank"><img class="bottomImg" src="./static/images/resumeIcon.png"/></a>
+				<a href="mailto:greg.murray20@gmail.com"> <img class="bottomImg" src="./static/images/emailIcon.svg"/></a>
+				<a href="http://www.linkedin.com/in/gmurray20" target="_blank"><img class="bottomImg" src="./static/images/linkedInIcon.png"/></a>
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-2 col-xs-0">
 				
@@ -461,6 +478,7 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<script src="./static/main.js"></script>
 </body>
 </html>
