--- a/index.html
+++ b/index.html
@@ -187,7 +187,12 @@
 			<div class="col-xs-1"></div>
 		</div>
 
-		<div class="row space"></div>
+		<div class="row space" style="text-align:center;">
+			<a href="https://www.linkedin.com/pulse/pivotal-your-standard-internship-alexxa-stiefel" target="_blank">
+				<img class="articleLink hidden-xs" src="./static/images/pivotalArticle.png" width=410px; height=310px;/>
+				<img class="articleLink hidden-lg hidden-md hidden-sm" src="./static/images/pivotalArticle.png" width=300px; height=225px;/>
+			</a>
+		</div>
 		<div class="row space"></div>
 
 		<!-- Citadel LLC -->
