--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<div class="hidden-lg hidden-md hidden-sm">
 		<!-- mobile nav bar -->
 		<div class="btn-group btn-group-lg mobile-top">
-	 		<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="background-color: #fff;">
+	 		<button id="mobileNavButton" type="button" class="btn btn-default">
 	 		<span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
 	 		</button>
 	  		<div class="dropdown-menu dropdown-menu-left" id="mobileDrop">
@@ -43,12 +43,20 @@
 	<a href="#top"></a>
 	<div class="row">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="topPic">
-			<div class="picture">
+			<div class="picture hidden-xs">
 				<div id="nameSmall">I'm Greg,</div>
   				<div id="nameSmall">welcome to my site.</div>
-  				<div style="text-align:center; position:relative; top:42%;">
-	  				<a href="./static/Greg_Murray.pdf" target="_blank" class="action-button shadow animate blue" style="color: #FFF; text-decoration: none;">Resume</a>
-	  				<a href="mailto:greg.murray20@gmail.com" class="action-button shadow animate green" style="color: #FFF; text-decoration: none;">Contact</a>
+  				<div class="topButtonContainers">
+	  				<a href="./static/Greg_Murray.pdf" target="_blank" class="btn btn-info topButton resumeButton">Resume</a>
+	  				<a href="mailto:greg.murray20@gmail.com" class="btn btn-info topButton contactButton">Contact</a>
+  				</div>
+			</div>
+			<div class="mobilePic hidden-lg hidden-md hidden-sm">
+				<div id="nameSmall">I'm Greg,</div>
+  				<div id="nameSmall">welcome to my site.</div>
+  				<div class="topButtonContainers">
+	  				<a href="./static/Greg_Murray.pdf" target="_blank" class="btn btn-info topButton resumeButton">Resume</a>
+	  				<a href="mailto:greg.murray20@gmail.com" class="btn btn-info topButton contactButton">Contact</a>
   				</div>
 			</div>
 		</div>
@@ -96,9 +104,9 @@
 		<div class="row hidden-lg hidden-md hidden-sm">
 			<div class="col-xs-1"></div>
 			<div class="col-xs-10">
-				<h3  style="text-align:center;">University of Illinois at Urbana-Champaign</h3>
-				<div style="text-align:center;" id="subtitle">B.S. in Computer Science with Mathematics Minor, May 2018</div>
-				<div style="text-align:center;" id="location">Champaign, IL</div>
+				<h3 class="standardTextAlignCenter">University of Illinois at Urbana-Champaign</h3>
+				<div class="standardTextAlignCenter" id="subtitle">B.S. in Computer Science with Mathematics Minor, May 2018</div>
+				<div class="standardTextAlignCenter" id="location">Champaign, IL</div>
 				<p>
 					Currently
 				</p>
@@ -470,7 +478,7 @@
 			<div class="col-lg-3 col-md-3 col-sm-2 col-xs-0">
 				
 			</div>
-			<div style="text-align:center;" class="col-lg-6 col-md-6 col-sm-8 col-xs-12 photoContainer">
+			<div class="col-lg-6 col-md-6 col-sm-8 col-xs-12 photoContainer standardTextAlignCenter">
 				<a href="./static/Greg_Murray.pdf" target="_blank"><img class="bottomImg" src="./static/images/resumeIcon.png"/></a>
 				<a href="mailto:greg.murray20@gmail.com"> <img class="bottomImg" src="./static/images/emailIcon.svg"/></a>
 				<a href="http://www.linkedin.com/in/gmurray20" target="_blank"><img class="bottomImg" src="./static/images/linkedInIcon.png"/></a>
