more changes to mobile dropdown

--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
 		<!-- mobile nav bar -->
 		<div class="btn-group btn-group-lg mobile-top">
 	 		<button id="mobileNavButton" type="button" class="btn btn-default">
-	 		<span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
+	 		<span class="glyphicon glyphicon-align-justify colorWhite" aria-hidden="true"></span>
 	 		</button>
 	  		<div class="dropdown-menu dropdown-menu-left" id="mobileDrop">
+	  			<div class="closeMobile">
+	  				<span class="glyphicon glyphicon-menu-up" id="closeMobileDrop"></span>
+	  			</div>
 	  			<div class="dropdown-item" id="mobileAboutMe">My Work</div>
-	  			<div class="dropdown-divider"></div>
 	    		<div class="dropdown-item" id="mobileProjects">My Projects</div>
-	    		<div class="dropdown-divider"></div>
 	    		<div class="dropdown-item" id="mobileTravel">My Travel</div>
-	    		<div class="dropdown-divider"></div>
 	    		<div class="dropdown-item" id="mobileContact">Contact</div>
 	  		</div>
 		</div>
