--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.0.47/jquery.fancybox.min.css" />
 	<link rel="stylesheet" type="text/css" href="./static/styles.css">
-	<link rel="icon" href="./icon.png">
+	<link rel="icon" href="./static/icon.png">
 </head>
 
 <body>
@@ -81,6 +81,18 @@
 				<div id="about-image"></div>
 			</div>
 		</div>
+
+		<div class="row">
+			<div class="col-lg-4 col-md-4 col-sm-3 col-xs-1"></div>
+			<div id="bioDescription" class="col-lg-6 col-md-4 col-sm-6 col-xs-10">
+				<p>
+					bio here a a a  a a a a a a a  a a a a a  a a a a a a a a aa
+				</p>
+			</div>
+			<div class="col-lg-4 col-md-4 col-sm-3 col-xs-1"></div>
+		</div>
+
+		<div class="row space"></div>
 
 		<!-- Illinois education -->
 		<div class="row">
@@ -374,13 +386,13 @@
 		<div class="row">
 			<div class="col-lg-3 col-md-3 col-sm-2 col-xs-1"></div>
 			<div class="col-lg-6 col-md-6 col-sm-8 col-xs-10">
-				<h3 style="text-align:center; font-style:italic; font-weight:normal;">
+				<h3 id="travelDescription">
 					I love to travel and meet new people. Here are some of my favorite memories over the years.
 				</h3>
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-2 col-xs-1"></div>
 		</div>
-		<div class="row"  style="text-align:center;">
+		<div class="row standardTextAlignCenter">
 			<iframe class="hidden-xs" width="560" height="315" src="https://www.youtube.com/embed/cxQLUCq6P-c" frameborder="1" allowfullscreen></iframe>
 			<iframe class="hidden-lg hidden-md hidden-sm" width="280" height="160" src="https://www.youtube.com/embed/cxQLUCq6P-c" frameborder="0" allowfullscreen></iframe>
 		</div>
