--- a/index.html
+++ b/index.html
@@ -486,18 +486,26 @@
 			</div>
 			<div class="col-lg-4 col-md-3 col-sm-2 col-xs-0"></div>
 		</div>
-		<div class="row space">
-			<div class="col-lg-3 col-md-3 col-sm-2 col-xs-0">
-				
+
+		<div class="row space"></div>
+
+		<div class="row">
+			<div class="col-lg-2 col-md-2 col-sm-1 col-xs-0"></div>
+			<div class="col-lg-8 col-md-8 col-sm-10 col-xs-12">
+				<img src="./static/images/businessCard.png" class="hidden-xs" style="border-radius: 5px; max-width:100%;">
+				<img src="./static/images/businessCardMobile.png" class="hidden-lg hidden-md hidden-sm" style="border-radius: 5px; max-width:100%;">
 			</div>
+			<div class="col-lg-2 col-md-2 col-sm-1 col-xs-0"></div>
+		</div>
+
+		<div class="row space">
+			<div class="col-lg-3 col-md-3 col-sm-2 col-xs-0"></div>
 			<div class="col-lg-6 col-md-6 col-sm-8 col-xs-12 photoContainer standardTextAlignCenter">
 				<a href="./static/Greg_Murray.pdf" target="_blank"><img class="bottomImg" src="./static/images/resumeIcon.png"/></a>
 				<a href="mailto:greg.murray20@gmail.com"> <img class="bottomImg" src="./static/images/emailIcon.svg"/></a>
 				<a href="http://www.linkedin.com/in/gmurray20" target="_blank"><img class="bottomImg" src="./static/images/linkedInIcon.png"/></a>
 			</div>
-			<div class="col-lg-3 col-md-3 col-sm-2 col-xs-0">
-				
-			</div>
+			<div class="col-lg-3 col-md-3 col-sm-2 col-xs-0"></div>
 		</div>
 	</div>
 
