python to write to file

--- a/contact.html
+++ b/contact.html
@@ -1,18 +1,34 @@
 
 
 	<BusinessCard>
-		<Name>Gregory Murray</Name>
-		<Title>Software Engineer</Title>
-		<Email>greg.murray20@gmail.com</Email>
-		<linkedIn>https://www.linkedin.com/in/gmurray20</linkedIn>
-		<github>https://github.com/gmurr20</github>
-		<website>https://gmurr20.github.io</website>
-		<script>console.log('Thanks for checking out my site!');</script>
+		<Name>
+			Gregory Murray
+		</Name>
+		<Title>
+			Software Engineer
+		</Title>
+		<Email>
+			greg.murray20@gmail.com
+		</Email>
+		<linkedIn>
+			https://www.linkedin.com/in/gmurray20
+		</linkedIn>
+		<github>
+			https://github.com/gmurr20
+		</github>
+		<website>
+			https://gmurr20.github.io
+		</website>
+		<script>
+			console.log('Thanks for checking out my site!');
+		</script>
 	</BusinessCard>
 
-
-
 	
+
+
+
+
 
 
 
