--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <div class="row">
       <div class="col-lg-3 col-md-4 col-sm-3 col-xs-1"></div>
       <div id="bioDescription" class="col-lg-6 col-md-4 col-sm-6 col-xs-10">
-          I am a driven software developer that loves teaching myself new technologies. I have worked in 3 very different software development processes, and was able to thrive in each situation.
+          my description
       </div>
       <div class="col-lg-3 col-md-4 col-sm-3 col-xs-1"></div>
     </div>
