--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <div class="row">
       <div class="col-lg-3 col-md-4 col-sm-3 col-xs-1"></div>
       <div id="bioDescription" class="col-lg-6 col-md-4 col-sm-6 col-xs-10">
-          my description
+          My name is Greg Murray and I am currently studying CS at the University of Illinois. I have already worked at 3 different companies in software roles, and am a fast learner when it comes to new technology stacks. Here is just a little of what I have done so far.
       </div>
       <div class="col-lg-3 col-md-4 col-sm-3 col-xs-1"></div>
     </div>
@@ -104,9 +104,7 @@
         <h3>University of Illinois at Urbana-Champaign</h3>
         <div id="subtitle">B.S. in Computer Science with Mathematics Minor, May 2018</div>
         <div id="location">Champaign, IL</div>
-        <p>
-          lorem ipsum
-        </p>
+          <p>University of Illinois has taught me to keep an open mind and to never stop working. Studying Computer Science in the College of Engineering with a minor in Mathematics, I am constantly pushed to not only learn academically, but also how to manage my time and follow a strict schedule. Being a co-founder of an investment group on campus within my Professional Business Fraternity Phi Chi Theta, I had to learn to balance my academics with my extracurricular obligations. Illinois has taught me learning is not just done in the classroom, as I am constantly learning new things every day from the people around me.</p><p>Whether it is myself trying to figure out a new language or framework, my great friends showing me something new that they have learned through their experiences, or learning from one of my many fine professors, I am always absorbing new information to further me as a person and a professional.</p>
       </div>
       <div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
     </div>
@@ -118,7 +116,7 @@
         <div class="standardTextAlignCenter" id="subtitle">B.S. in Computer Science with Mathematics Minor, May 2018</div>
         <div class="standardTextAlignCenter" id="location">Champaign, IL</div>
         <p>
-          lorem ipsum
+          <p>University of Illinois has taught me to keep an open mind and to never stop working. Studying Computer Science in the College of Engineering with a minor in Mathematics, I am constantly pushed to not only learn academically, but also how to manage my time and follow a strict schedule. Being a co-founder of an investment group on campus within my Professional Business Fraternity Phi Chi Theta, I had to learn to balance my academics with my extracurricular obligations. Illinois has taught me learning is not just done in the classroom, as I am constantly learning new things every day from the people around me.</p><p>Whether it is myself trying to figure out a new language or framework, my great friends showing me something new that they have learned through their experiences, or learning from one of my many fine professors, I am always absorbing new information to further me as a person and a professional.</p>
         </p>
       </div>
       <div class="col-xs-1"></div>
@@ -130,9 +128,7 @@
         <h3>Echelon Consulting</h3>
         <div id="subtitle">Software Engineer Intern, Summer 2017</div>
         <div id="location">Chicago, IL</div>
-        <p>
           lorem ipsum
-        </p>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
         <div class="hidden-xs" style="float:left;">
@@ -173,9 +169,7 @@
         <h3>Pivotal Labs</h3>
         <div id="subtitle">Software Engineer Intern, Summer 2016</div>
         <div id="location">Chicago, IL</div>
-        <p>
-          lorem ipsum
-        </p>
+          <p>Pivotal Labs is a programming consulting company that teaches larger corporations how to adapt to an agile software development framework. They pair program side by side with clients, showing them how valuable test driven development and pair programming are, all while building an application that can be eventually handed off to the client.</p><p>This internship really opened my mind to the importance of following the right practices when it comes to software development. Being brand new to both pair programming and test driven development, Pivotal Labs showed me just how useful and powerful developers can be when well organized. Through the continuous delivery of our application and weekly scrum meetings, I gained invaluable experience coding with some of the best developers in the business. I was able to quickly learn and contribute to our React/Redux web application, and I became a better programmer in the process by seeing my team's thought process first hand through pair programming. I became a more well-rounded developer during my time here, as I improved in communicating my ideas clearly to my co-workers, and learned to be open to change when a better solution was presented.</p><p>Below is an article that Pivotal Labs wrote about my time there.</p>
       </div>
       <div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
     </div>
@@ -187,7 +181,7 @@
         <div class="standardTextAlignCenter" id="subtitle">Software Engineer Intern, Summer 2016</div>
         <div class="standardTextAlignCenter" id="location">Chicago, IL</div>
         <p>
-          lorem ipsum
+          <p>Pivotal Labs is a programming consulting company that teaches larger corporations how to adapt to an agile software development framework. They pair program side by side with clients, showing them how valuable test driven development and pair programming are, all while building an application that can be eventually handed off to the client.</p><p>This internship really opened my mind to the importance of following the right practices when it comes to software development. Being brand new to both pair programming and test driven development, Pivotal Labs showed me just how useful and powerful developers can be when well organized. Through the continuous delivery of our application and weekly scrum meetings, I gained invaluable experience coding with some of the best developers in the business. I was able to quickly learn and contribute to our React/Redux web application, and I became a better programmer in the process by seeing my team's thought process first hand through pair programming. I became a more well-rounded developer during my time here, as I improved in communicating my ideas clearly to my co-workers, and learned to be open to change when a better solution was presented.</p><p>Below is an article that Pivotal Labs wrote about my time there.</p>
         </p>
       </div>
       <div class="col-xs-1"></div>
@@ -207,9 +201,7 @@
         <h3>Citadel LLC</h3>
         <div id="subtitle">Citadel Technology Intern, Summer 2015</div>
         <div id="location">Chicago, IL</div>
-        <p>
           lorem ipsum
-        </p>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
         <div class="hidden-xs" style="float:left;">
@@ -261,9 +253,7 @@
         <h3>Raspberry Pi Google Calendar TV Alarm</h3>
         <div id="subtitle">Spring 2017</div>
         <div id="location"></div>
-        <p>
           lorem ipsum
-        </p>
       </div>
       <div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
     </div>
@@ -287,9 +277,7 @@
         <h3>Fantasy Sports Lineup Generator</h3>
         <div id="subtitle">Fall 2016</div>
         <div id="location"></div>
-        <p>
           lorem ipsum
-        </p>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
         <div class="hidden-xs" style="float:left;">
@@ -330,9 +318,7 @@
         <h3>Personal Website and Photo Album</h3>
         <div id="subtitle">Spring 2017</div>
         <div id="location"></div>
-        <p>
           lorem ipsum
-        </p>
       </div>
       <div class="col-lg-2 col-md-2 col-sm-1 hidden-xs"></div>
     </div>
