Slowly filling out content

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <h3>Citadel LLC</h3>
         <div id="subtitle">Citadel Technology Intern, Summer 2015</div>
         <div id="location">Chicago, IL</div>
-          lorem ipsum
+          <p>Citadel is hedge fund located in Chicago, and is a leading investor in the financial markets around the world. Citadel Technology was a business within Citadel that took their trading application, and marketed it and sold to other companies.</p><p>I was lucky enough to intern for Citadel my freshman year, joining the support and implementation team for Citadel Technology. Seeing how software development works in the workplace for the first time, I helped automate software environment checks, optimize existing scripts, and even create my own script to stress test their financial software. Citadel showed me how to keep your head to the grind stone to get the job done, and that your best way to learn a new language or framework is through constant testing and refactoring. Teaching myself threading and Python scripting during my time there, this internship confirmed my choice in picking the right profession.</p>
       </div>
       <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
         <div class="hidden-xs" style="float:left;">
@@ -225,7 +225,7 @@
         <div class="standardTextAlignCenter" id="subtitle">Citadel Technology Intern, Summer 2015</div>
         <div class="standardTextAlignCenter" id="location">Chicago, IL</div>
         <p>
-          lorem ipsum
+          <p>Citadel is hedge fund located in Chicago, and is a leading investor in the financial markets around the world. Citadel Technology was a business within Citadel that took their trading application, and marketed it and sold to other companies.</p><p>I was lucky enough to intern for Citadel my freshman year, joining the support and implementation team for Citadel Technology. Seeing how software development works in the workplace for the first time, I helped automate software environment checks, optimize existing scripts, and even create my own script to stress test their financial software. Citadel showed me how to keep your head to the grind stone to get the job done, and that your best way to learn a new language or framework is through constant testing and refactoring. Teaching myself threading and Python scripting during my time there, this internship confirmed my choice in picking the right profession.</p>
         </p>
       </div>
       <div class="col-xs-1"></div>
